[package]
name = "mini-async-runtime"
version = "0.1.0"
edition = "2021"
description = "A minimal async runtime for Rust, inspired by tokio"
license = "Apache-2.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_bench"
harness = false
