[package]
name = "mini-async-runtime"
version = "0.1.0"
edition = "2024"
description = "A minimal async runtime for Rust, inspired by tokio"
license = "Apache-2.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "scheduler_bench"
harness = false
